// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artifactRegistry#fetch-artifact-registry-repository-uses-kms-key should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T19:09:28.444136Z",
            "format": "PYTHON",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
            "sizeBytes": "9458",
            "updateTime": "2024-04-17T20:37:12.582653Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T19:09:28.444136Z",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "format": "PYTHON",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "updatedTime": "2024-04-17T20:37:12.582653Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T10:11:37.491482Z",
            "description": "npm package",
            "format": "NPM",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
            "updateTime": "2024-04-17T10:11:37.491482Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T10:11:37.491482Z",
      "description": "npm package",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "format": "NPM",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "updatedTime": "2024-04-17T10:11:37.491482Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2024-04-15T04:46:39.615018Z",
            "description": "testing",
            "dockerConfig": {},
            "format": "DOCKER",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
            "updateTime": "2024-04-16T04:59:58.144094Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-15T04:46:39.615018Z",
      "description": "testing",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "format": "DOCKER",
      "kmsKey": undefined,
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "updatedTime": "2024-04-16T04:59:58.144094Z",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "USES",
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev|uses|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "_mapping": {
        "relationshipDirection": "FORWARD",
        "skipTargetCreation": true,
        "sourceEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
        "targetEntity": {
          "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
          "_type": "google_kms_crypto_key",
        },
        "targetFilterKeys": [
          [
            "_type",
            "_key",
          ],
        ],
      },
      "_type": "google_cloud_artifact_registry_repository_uses_kms_crypto_key",
      "displayName": "USES",
    },
    {
      "_class": "USES",
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm|uses|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "_mapping": {
        "relationshipDirection": "FORWARD",
        "skipTargetCreation": true,
        "sourceEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
        "targetEntity": {
          "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
          "_type": "google_kms_crypto_key",
        },
        "targetFilterKeys": [
          [
            "_type",
            "_key",
          ],
        ],
      },
      "_type": "google_cloud_artifact_registry_repository_uses_kms_crypto_key",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_cloud_artifact_registry_repository",
    "google_cloud_artifact_registry_repository_uses_kms_crypto_key",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`artifactRegistry#fetch-artifact-registry-repository-uses-package should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T19:09:28.444136Z",
            "format": "PYTHON",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
            "sizeBytes": "9458",
            "updateTime": "2024-04-17T20:37:12.582653Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T19:09:28.444136Z",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "format": "PYTHON",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "updatedTime": "2024-04-17T20:37:12.582653Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T10:11:37.491482Z",
            "description": "npm package",
            "format": "NPM",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
            "updateTime": "2024-04-17T10:11:37.491482Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T10:11:37.491482Z",
      "description": "npm package",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "format": "NPM",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "updatedTime": "2024-04-17T10:11:37.491482Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2024-04-15T04:46:39.615018Z",
            "description": "testing",
            "dockerConfig": {},
            "format": "DOCKER",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
            "updateTime": "2024-04-16T04:59:58.144094Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-15T04:46:39.615018Z",
      "description": "testing",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "format": "DOCKER",
      "kmsKey": undefined,
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "updatedTime": "2024-04-16T04:59:58.144094Z",
    },
    {
      "_class": [
        "CodeModule",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2024-04-17T20:37:11.746651Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
            "updateTime": "2024-04-17T20:37:11.746651Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_package",
      "createdOn": undefined,
      "createdTime": "2024-04-17T20:37:11.746651Z",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "repositoryName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "updatedTime": "2024-04-17T20:37:11.746651Z",
    },
    {
      "_class": [
        "CodeModule",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2024-04-17T20:37:12.592034Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
            "updateTime": "2024-04-17T20:37:12.592034Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_package",
      "createdOn": undefined,
      "createdTime": "2024-04-17T20:37:12.592034Z",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "repositoryName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "updatedTime": "2024-04-17T20:37:12.592034Z",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev|uses|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/peppercorn",
      "_type": "google_cloud_artifact_registry_repository_uses_package",
      "displayName": "USES",
    },
    {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev|uses|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev/packages/sampleproject",
      "_type": "google_cloud_artifact_registry_repository_uses_package",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_cloud_artifact_registry_repository",
    "google_cloud_artifact_registry_package",
    "google_cloud_artifact_registry_repository_uses_package",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 2,
}
`;

exports[`artifactRegistry#fetch-project-has-artifact-registry should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Service",
      ],
      "_key": "958457776463_google_cloud_artifact_registry",
      "_rawData": [],
      "_type": "google_cloud_artifact_registry",
      "category": [
        "software",
      ],
      "createdOn": undefined,
      "displayName": "Artifact Registry Service",
      "endpoint": "http://console.cloud.google.com/",
      "function": [
        "container-registry",
      ],
      "name": "Artifact Registry Service",
    },
    {
      "_class": [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "W/"8f56735f6f3d890d"",
            "labels": {
              "firebase": "enabled",
            },
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2024-02-27T16:17:58.322524Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "tag.firebase": "enabled",
      "updatedOn": 1709050678322,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/167984947943",
      "_key": "projects/167984947943|has|958457776463_google_cloud_artifact_registry",
      "_toEntityKey": "958457776463_google_cloud_artifact_registry",
      "_type": "google_cloud_project_has_artifact_registry",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_cloud_artifact_registry",
    "google_cloud_project",
    "google_cloud_project_has_artifact_registry",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`artifactRegistry#fetch-project-has-artifact-registry-repository should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T19:09:28.444136Z",
            "format": "PYTHON",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
            "sizeBytes": "9458",
            "updateTime": "2024-04-17T20:37:12.582653Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T19:09:28.444136Z",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "format": "PYTHON",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "updatedTime": "2024-04-17T20:37:12.582653Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cleanupPolicyDryRun": true,
            "createTime": "2024-04-17T10:11:37.491482Z",
            "description": "npm package",
            "format": "NPM",
            "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
            "updateTime": "2024-04-17T10:11:37.491482Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-17T10:11:37.491482Z",
      "description": "npm package",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "format": "NPM",
      "kmsKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/keyRings/demoKeyRing/cryptoKeys/demoKey1",
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "updatedTime": "2024-04-17T10:11:37.491482Z",
    },
    {
      "_class": [
        "CodeRepo",
        "Repository",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2024-04-15T04:46:39.615018Z",
            "description": "testing",
            "dockerConfig": {},
            "format": "DOCKER",
            "mode": "STANDARD_REPOSITORY",
            "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
            "updateTime": "2024-04-16T04:59:58.144094Z",
          },
        },
      ],
      "_type": "google_cloud_artifact_registry_repository",
      "createdOn": undefined,
      "createdTime": "2024-04-15T04:46:39.615018Z",
      "description": "testing",
      "displayName": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "format": "DOCKER",
      "kmsKey": undefined,
      "mode": "STANDARD_REPOSITORY",
      "name": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "updatedTime": "2024-04-16T04:59:58.144094Z",
    },
    {
      "_class": [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "W/"8f56735f6f3d890d"",
            "labels": {
              "firebase": "enabled",
            },
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2024-02-27T16:17:58.322524Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "tag.firebase": "enabled",
      "updatedOn": 1709050678322,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/167984947943",
      "_key": "projects/167984947943|has|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepofordev",
      "_type": "google_cloud_project_has_artifact_registry_repository",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/167984947943",
      "_key": "projects/167984947943|has|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/demorepositorynpm",
      "_type": "google_cloud_project_has_artifact_registry_repository",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "projects/167984947943",
      "_key": "projects/167984947943|has|projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/northamerica-northeast1/repositories/test-repository",
      "_type": "google_cloud_project_has_artifact_registry_repository",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_cloud_artifact_registry_repository",
    "google_cloud_project",
    "google_cloud_project_has_artifact_registry_repository",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 3,
}
`;
